# docling-converter

./: .gitignore  AGENTS.md  COMPLETED_TASKS.md  IMPLEMENTATION.md  LICENSE  PENDING_TASKS.md  PROJECT_PLAN.md  README.md  TEST.md  app_settings.py  conversion_logic.py  main.py  pyproject.toml  test-coverage-plan.md  test_app_settings.py  test_main.py  test_wiki_conversion.py  test_wiki_discovery.py  test_wiki_urls.py  test_workspace_model.py  test_workspace_paths.py  test_workspace_persistence.py  test_workspace_ui.py  wiki-plan.md  wiki_conversion.py  wiki_discovery.py  wiki_model.py  wiki_ui.py  wiki_urls.py  workspace_model.py  workspace_paths.py  workspace_persistence.py  workspace_ui.py
src/docling_converter/: __init__.py  __main__.py  app_settings.py  conversion_logic.py  main.py  wiki_conversion.py  wiki_discovery.py  wiki_ui.py  workspace_model.py  workspace_paths.py  workspace_persistence.py
tests/: test_app_settings.py  test_main.py  test_wiki_conversion.py  test_wiki_discovery.py  test_wiki_urls.py  test_workspace_model.py  test_workspace_paths.py  test_workspace_persistence.py  test_workspace_ui.py
