[project]
name = "docling-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "docling>=2.75.0",
    "hf-xet>=1.3.1",
    "pyside6>=6.10.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
