[project]
name = "docling-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "docling>=2.75.0",
    "hf-xet>=1.3.1",
    "pypdf>=6.0.0",
    "pyside6>=6.10.2",
]

[project.scripts]
docling-converter = "docling_converter.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docling_converter"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
